integration/customer-mdm-service/salesforce/src/objects/AvisoRecepcionCambiado__e.object
<CustomObject>
    <label>Aviso de recepción cambiado</label>
    <pluralLabel>Avisos de recepción cambiados</pluralLabel>
    <description>A reception notice was created, changed or deleted. It carries the whole notice, so the MDM projects it without reading Salesforce.</description>
    <fields>
        <fullName>AvisoId__c</fullName>
        <label>Aviso</label>
        <type>Text</type>
        <length>18</length>
    </fields>
    <fields>
        <fullName>MdmAvisoId__c</fullName>
        <label>Id del aviso (MDM)</label>
        <type>Text</type>
        <length>64</length>
    </fields>
    <fields>
        <fullName>MdmId__c</fullName>
        <label>Cliente (MDM)</label>
        <type>Text</type>
        <length>64</length>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contacto</label>
        <type>Text</type>
        <length>18</length>
    </fields>
    <fields>
        <fullName>Texto__c</fullName>
        <label>Texto</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Desde__c</fullName>
        <label>Desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hasta__c</fullName>
        <label>Hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MostrarEn__c</fullName>
        <label>Mostrar en</label>
        <type>Text</type>
        <length>100</length>
    </fields>
    <fields>
        <fullName>Activo__c</fullName>
        <label>Activo</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
</CustomObject>